<resources>
    <string name="app_name">Catalog</string>
    <string name="title_movies">Movies Title</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="date">January 1, 1999</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies_photo">Movies Photo</string>
    <string name="change_language">Change Language Settings</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="nama">Nur Ali Majid</string>
    <string name="email">nuralimajids@gmail.com </string>
    <string name="nohp">081541403701</string>
</resources>
