<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_detail">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="395dp"
            android:layout_height="198dp"
            android:contentDescription="@string/movies_photo" />

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_detail"
            android:layout_marginTop="27dp"
            android:layout_marginStart="16dp"
            android:text="@string/title_movies"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_detail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_detail"
            android:layout_marginTop="109dp"
            android:text="@string/lorem" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>